# obvh

./: .gitignore  README.md
rsrc/gltf/crown/: crown.gltf
rsrc/gltf/dragon/: dragon.gltf
rsrc/gltf/hairball/: hairball.gltf
src/: CMakeLists.txt
src/ads/: CMakeLists.txt
src/ads/atrbvh_gpu/: AgglomerativeScheduler.cpp  AgglomerativeScheduler.h  AgglomerativeTreelet.cu  AgglomerativeTreelet.h  AgglomerativeTreeletOptimizer.cpp  AgglomerativeTreeletOptimizer.h  BVHBuilder.h  BVHOptimizer.h  BVHTree.h  BVHTreeInstanceManager.cpp  BVHTreeInstanceManager.h  CMakeLists.txt  Commons.cuh  CubWrapper.cu  CubWrapper.h  CudaErrorCheck.h  CudaTimer.cpp  CudaTimer.h  LBVH.cu  LBVH.h  LBVHBuilder.cpp  LBVHBuilder.h  Scene.h  SceneWrapper.cpp  SceneWrapper.h  SoABVHTree.cpp  SoABVHTree.h  TimeKernelExecution.h  Treelet.cuh  atrbvh.cu  atrbvh.h  module.c
src/ads/common/: intersectors.cpp  intersectors.h  transforms.cpp  transforms.h
src/ads/common/cuda/: intersectors.cu  intersectors.cuh  transforms.cu  transforms.cuh
src/ads/lbvh_gpu/: CMakeLists.txt  lbvh.cu  lbvh.h  module.c
src/app/: CMakeLists.txt  cmdopt.c  cmdopt.h  gltf.c  main.cpp
src/common/: ads.c  ads.h  geometry.cpp  geometry.h  integrator.c  integrator.h  korangar.h  logger.c  logger.h  queue.c  queue.h  sampling.c  sampling.h  scene.c  scene.h  texture.c  texture.h  util.c  util.h  vecmath.h
src/common/algorithm/dito/: dito.cpp  dito.cu  dito.cuh
src/common/cuda/: atomics.h  scene.h  util.c  util.cuh  util.h  vecmath.cu
src/integrators/: CMakeLists.txt
src/integrators/bench/: CMakeLists.txt  bench.cu  bench.h  module.c
src/integrators/pt_gpu/: CMakeLists.txt  pt.cu
