cmake_minimum_required(VERSION 2.8.12)

macro(subdirlist result curdir)
  file(GLOB children RELATIVE ${curdir} ${curdir}/*)
  set(dirlist "")
  foreach(child ${children})
    if(IS_DIRECTORY ${curdir}/${child})
      list(APPEND dirlist ${child})
    endif()
  endforeach()
  set(${result} ${dirlist})
endmacro()

add_subdirectory (lbvh_gpu)
add_subdirectory (atrbvh_gpu)
if(WIN32)
#add_subdirectory (sbvh_gpu)
endif()

if(WIN32)
subdirlist(EMBREE_SUBDIRS "${CMAKE_SOURCE_DIR}/../deps/embree3/lib/cmake")
list(GET EMBREE_SUBDIRS 0 EMBREE_SUBDIR)
set(embree_DIR "${CMAKE_SOURCE_DIR}/../deps/embree3/lib/cmake/${EMBREE_SUBDIR}")
else()
subdirlist(EMBREE_SUBDIRS "${CMAKE_SOURCE_DIR}/../deps/embree-3.13.2.x86_64.linux/lib/cmake")
list(GET EMBREE_SUBDIRS 0 EMBREE_SUBDIR)
set(embree_DIR "${CMAKE_SOURCE_DIR}/../deps/embree-3.13.2.x86_64.linux/lib/cmake/${EMBREE_SUBDIR}")
endif()

set_target_properties(lbvh_gpu PROPERTIES FOLDER "ads")
set_target_properties(atrbvh_gpu PROPERTIES FOLDER "ads")
if(WIN32)
#set_target_properties(sbvh_gpu PROPERTIES FOLDER "ads")
endif()
if(embree_FOUND)
  message("Found Embree3 at ${EMBREE_ROOT_DIR}")
  add_subdirectory (embree3)
  set_target_properties(e3 PROPERTIES FOLDER "ads")
  add_dependencies(pt e3)
endif()

subdirlist(SUBDIRS "C:/ProgramData/NVIDIA Corporation")

string(FIND "${SUBDIRS}" "OptiX SDK 7.0" FOUND_POSITION_70)
if(NOT ${FOUND_POSITION_70} EQUAL -1)
  set(OptiX_INSTALL_DIR "C:/ProgramData/NVIDIA Corporation/OptiX SDK 7.0.0")
endif()
string(FIND "${SUBDIRS}" "OptiX SDK 7.1" FOUND_POSITION_71)
if(NOT ${FOUND_POSITION_71} EQUAL -1)
  set(OptiX_INSTALL_DIR "C:/ProgramData/NVIDIA Corporation/OptiX SDK 7.1.0")
endif()
string(FIND "${SUBDIRS}" "OptiX SDK 7.2" FOUND_POSITION_72)
if(NOT ${FOUND_POSITION_72} EQUAL -1)
  set(OptiX_INSTALL_DIR "C:/ProgramData/NVIDIA Corporation/OptiX SDK 7.2.0")
endif()
string(FIND "${SUBDIRS}" "OptiX SDK 7.3" FOUND_POSITION_73)
if(NOT ${FOUND_POSITION_73} EQUAL -1)
  set(OptiX_INSTALL_DIR "C:/ProgramData/NVIDIA Corporation/OptiX SDK 7.3.0")
endif()

subdirlist(CUDA_SUBDIRS "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA")
string(FIND "${CUDA_SUBDIRS}" "v10.1" FOUND_POSITION_CUDA_10_1)
if(NOT ${FOUND_POSITION_CUDA_10_1} EQUAL -1)
  set(CUDA_INSTALL_DIR "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.1")
endif()
string(FIND "${CUDA_SUBDIRS}" "v10.2" FOUND_POSITION_CUDA_10_2)
if(NOT ${FOUND_POSITION_CUDA_10_2} EQUAL -1)
  set(CUDA_INSTALL_DIR "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v10.2")
  set(CUDA_INSTALL_DIR "${CUDA_INSTALL_DIR}/include")
endif()
string(FIND "${CUDA_SUBDIRS}" "v11.1" FOUND_POSITION_CUDA_11_1)
if(NOT ${FOUND_POSITION_CUDA_11_1} EQUAL -1)
  set(CUDA_INSTALL_DIR "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v11.1")
endif()
string(FIND "${CUDA_SUBDIRS}" "v11.2" FOUND_POSITION_CUDA_11_2)
if(NOT ${FOUND_POSITION_CUDA_11_2} EQUAL -1)
  set(CUDA_INSTALL_DIR "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v11.2")
endif()
string(FIND "${CUDA_SUBDIRS}" "v11.3" FOUND_POSITION_CUDA_11_3)
if(NOT ${FOUND_POSITION_CUDA_11_3} EQUAL -1)
  set(CUDA_INSTALL_DIR "C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v11.3")
endif()

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../deps/CUDA/cmake")
find_package(CUDA QUIET)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../deps/Optix7/cmake")
find_package(OptiX QUIET)
if(OptiX_FOUND)
  add_subdirectory (optix7)
  set_target_properties(optix7 PROPERTIES FOLDER "ads")
  add_dependencies(pt optix7)
endif()
